[package]
name = "gitclass"
version = "0.5.0"
authors = ["mttaggart <michael.t.taggart@gmail.com>"]
license = "MIT"
description = "Tool for teachers to manage classes using git"
repository = "https://github.com/mttaggart/gitclass"
readme = "README.md"

[dependencies]
clap = {version = "2.13.0", features=["yaml"]}
json = "0.10.2"
git2 = "0.3"
chrono = "0.2.25"
