[package]
name = "gitclass"
version = "0.7.3"
authors = ["mttaggart <michael.t.taggart@gmail.com>"]
license = "MIT"
description = "Tool for teachers to manage classes using git"
repository = "https://github.com/mttaggart/gitclass"
readme = "README.md"

[dependencies]
clap = {version = "2.29.0", features=["yaml"]}
json = "0.11.6"
